# legal-did

./: .env.example  .envrc  .gitignore  Anchor.toml  Cargo.toml  README.md  SQUADS_ADMIN_GUIDE.md  SQUADS_CONTROL_DIAGRAM.excalidraw  SQUADS_MULTISIG_REPORT.md  build-and-fix-idl.sh  deploy-devnet.sh  fix-security-vulnerabilities.sh  hardhat.config.ts  package.json  tsconfig.json  upgrade-authority-transfer-20260209_134401.txt
contracts/LegalAttestation/: TaggedAttester.sol  TaggedQuery.sol  TaggedResolver.sol  TaggedSchemaRegistrar.sol
contracts/LegalDID/: LegalDID.sol  LegalDIDV2.sol  LegalDIDV3.sol  LegalDIDV4.sol
docs/deployment/: MAINNET_UPGRADE_V4_GUIDE.md  SEPOLIA_UPGRADE_V4_RECORD.md
examples/: minimal-mint-price-query.js  mint-price-query.html  simple-mint-price-query.ts  solana-did-integration.ts  solana-frontend-mint-price.ts
programs/LegalAttestation/: Cargo.toml
programs/LegalAttestation/src/: error.rs  lib.rs  state.rs
programs/LegalAttestation/src/instructions/: create_attestation.rs  create_credential.rs  create_schema.rs  initialize.rs  manage_operator.rs  mod.rs  request_attestation.rs  revoke_attestation.rs
programs/LegalDID/: Cargo.toml
programs/rnsdid-core/: Cargo.toml
programs/rnsdid-core/src/: error.rs  lib.rs  state.rs  utils.rs
programs/rnsdid-core/src/instructions/: airdrop.rs  authorize_mint.rs  burn.rs  cleanup.rs  initialize.rs  mod.rs  revoke.rs  verify.rs
scripts/: admin-revoke.ts  check-authority.ts  check-project-status.js  check-security.sh  check-space.rs  check_roles.js  close-ata.ts  config.ts  direct-mint.js  init-devnet.ts  init-simple.js  initialize-project.js  mint-devnet.ts  mint-did-simple.js  mint-did-solana.ts  mint-to-euwtas.ts  mint-to-wallet.ts  mint-with-custom-rnsid.ts  mint-with-real-metadata.ts  quick-mint.sh  scan_roles.js  scan_roles_etherscan.js  test-connection.js  test-metadata.js  test-mint-creation.ts  update-base-uri.ts  user-burn.ts
scripts/evm/: airdrop-multiple.ts  airdrop-v4-existing-contract.ts  airdrop-v4-single.ts  airdrop-v4-test.ts  (+30 more)
tests/: 10_multiple_rnsid_same_wallet.test.ts  11_rnsid_status_cleanup.test.ts  12_simple_num_test.test.ts  13_revoke_flow.test.ts  14_optimized_flow.test.ts  1_initialize.test.ts  2_collection_config.test.ts  3_authorize_mint.test.ts  4_airdrop.test.ts  5._fetch_data_info.test.ts  6_burn.test.ts  7_revoke.test.ts  8_rent_analysis.test.ts  9_reuse_rnsid.test.ts  burn_revoke_conflict.test.ts  debug_seeds.test.ts  revoke_cleanup_flow.test.ts  revoke_rent_analysis.test.ts  revoke_then_actions.test.ts  simple_revoke.test.ts
(+93 files in other folders)
