[package]
name = "rnsdid-core"
version = "0.2.0"
description = "RNSID DID on Solana with Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rnsdid_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.6"
spl-token-group-interface = "0.4"
spl-pod = "0.4"
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
sha2 = "0.10"
